fixing spacing between the navigation and header

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -63,8 +63,8 @@ img.Rphoto {
   width: 100%;
 }
 #wrapper-inner {
-  padding: 35px 17px 30px 17px;
-  width: 95%;
+  padding: 15px 3px 30px 17px;
+  width: 98%;
   float: left;
 }
 #masthead h1 a {
